testing/framework/resources/Advanced/Failing/mondrian/query217.e
20319
21215
22478
23112
23593
23598
23688
23759
24597
27694
28206
30268
30584
30797
33858
34452
34791
36509
38382
39696
\N
